--- a/angular-search/src/app/page/layout/header/header.component.scss
+++ b/angular-search/src/app/page/layout/header/header.component.scss
@@ -6,7 +6,7 @@
   right: $sidebar-width;
   left: $navigation-width;
   top: 0;
-  background-color: $background-secondary;
+  background-color: $background-primary;
 
   .header-container {
     @apply flex;
