--- a/angular-search/src/app/page/layout/layout.component.scss
+++ b/angular-search/src/app/page/layout/layout.component.scss
@@ -10,7 +10,7 @@
     .content-body {
       width: 0;
       @apply flex flex-1 flex-col;
-      background: $background-secondary;
+      background: $background-primary;
 
       .content {
         padding: 30px;
