--- a/angular-search/src/app/page/layout/navigation/navigation.component.html
+++ b/angular-search/src/app/page/layout/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="navigation" [class.open]="isOpen">
   <div class="logo">
-    <a href=index.html>
+    <a [href]="homeUrl">
       <img src="assets/images/ademax_no_font.png" alt="logo">
     </a>
   </div>
