--- a/angular-search/src/app/page/layout/navigation/navigation.component.scss
+++ b/angular-search/src/app/page/layout/navigation/navigation.component.scss
@@ -9,7 +9,7 @@
   left: 0;
   bottom: 0;
   top: 0;
-  background-color: $background-primary;
+  background-color: $background-navigation;
 
   .logo {
     @apply mx-auto;
