--- a/angular-search/src/globals.scss
+++ b/angular-search/src/globals.scss
@@ -11,6 +11,7 @@ $color-secondary: #a461d8;
 $color-danger: red;
 
 $background-primary: #FFFFFF;
+$background-navigation: rgba(31, 41, 55, 1);
 $background-secondary: #E6F2FF;
 
 $default-border-radius: 8px;
