--- a/angular-search/src/app/page/upload/upload.component.html
+++ b/angular-search/src/app/page/upload/upload.component.html
@@ -27,25 +27,21 @@
   <div class="col-12">
     <Card title="Bước 2: Cập nhật thông tin tài liệu">
       <div class="container-fluid p-4">
-        <div class="row mb-2 text-red-600">
-          <p>
-            <span *ngFor="let error of validationTracking">- {{error}}<br/></span>
-          </p>
-        </div>
-        <div class="row mb-2" *ngFor="let propChunk of requiredProps">
+        <div class="row">
           <div class="col-md-6">
-            <label class="font-bold" for="{{propChunk[0].name}}"><span class="asterisk">*</span> {{propChunk[0].note}}</label>
-            <input [type]="propChunk[0].type === 'date' ? 'datetime-local' : 'text'" class="form-control col-12" id="{{propChunk[0].name}}" [(ngModel)]="metaTracking[propChunk[0].name]"/>
+            <div class="mb-2">
+              <p class="text-red-600">
+                <span *ngFor="let error of validationTracking">- {{error}}<br/></span>
+              </p>
+              <div class="form-group" *ngFor="let prop of allProps">
+                <label class="font-bold" for="{{prop.name}}"><span class="asterisk">*</span> {{prop.note}}</label>
+                <input [type]="prop.type === 'date' ? 'datetime-local' : 'text'" class="form-control col-12" id="{{prop.name}}" [(ngModel)]="metaTracking[prop.name]"/>
+              </div>
+            </div>
           </div>
-          <div class="col-md-6" *ngIf="propChunk.length > 1">
-            <label class="font-bold" for="{{propChunk[1].name}}"><span class="asterisk">*</span> {{propChunk[1].note}}</label>
-            <input [type]="propChunk[1].type === 'date' ? 'datetime-local' : 'text'" class="form-control col-12" id="{{propChunk[1].name}}" [(ngModel)]="metaTracking[propChunk[1].name]"/>
-          </div>
-        </div>
-        <div class="row mt-4">
-          <div class="col-12">
+          <div class="col-md-6">
             <label class="font-bold">Nội dung</label>
-            <textarea class="form-control col-12" [rows]="10">{{getContent()}}</textarea>
+            <textarea class="form-control col-12" [rows]="20">{{getContent()}}</textarea>
           </div>
         </div>
       </div>
