--- a/angular-search/src/app/page/my-document/my-document.component.html
+++ b/angular-search/src/app/page/my-document/my-document.component.html
@@ -1,4 +1,10 @@
 <div class="row">
+    <div class="col-12 page-header">
+      <img src="assets/icons/primary/bxs-user-detail.svg"/>
+      <h1>Tài liệu của tôi</h1>
+    </div>
+  </div>
+<div class="row">
     <div class="col-md-10">
         <Card>
             <Table
