udpate html show

--- a/angular-search/src/app/page/detail/detail.component.html
+++ b/angular-search/src/app/page/detail/detail.component.html
@@ -19,9 +19,9 @@
         </Table>
         </div>
         <div class="col-md-6">
-          <Toggle [checked]="showContentHtml" class="mt-4 mb-2" title="Hiển thị dạng HTML" (onChanged)="toggleHtml($event)"></Toggle>
+          <Toggle [checked]="showContentHtml" *ngIf="document.content_html" class="mt-4 mb-2" title="Hiển thị dạng HTML" (onChanged)="toggleHtml($event)"></Toggle>
           <textarea *ngIf="!showContentHtml" class="form-control" rows="25" [value]="document.content"></textarea>
-          <Pagination *ngIf="showContentHtml" [desc]="false" [totalItems]="2" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
+          <Pagination *ngIf="showContentHtml" [desc]="false" [totalItems]="htmlPageCount" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
           <iframe #contentHtml class="w-full bg-white border-0" [class.hide]="!showContentHtml"></iframe>
         </div>
       </div>
