page-action style

--- a/angular-search/src/app/page/search/search.component.html
+++ b/angular-search/src/app/page/search/search.component.html
@@ -55,7 +55,7 @@
     </Card>
     <Card class="flex-1 main-table">
       <div class="page-action-wrapper text-left">
-        <div class="page-action">
+        <div class="page-action ml-auto">
           <Button icon="bxs-dock-left.svg"
                   [type]="leftFilterShow ? 'light' : 'default'"
                   class="mr-2"
