--- a/angular-search/src/app/page/detail/detail.component.html
+++ b/angular-search/src/app/page/detail/detail.component.html
@@ -20,23 +20,24 @@
         </div>
         <div class="col-md-6">
           <div class="row">
-            <label class="col-4 flex items-center">Hiển thị:</label>
-            <div class="col-8">
-              <select [(ngModel)]="displayType" class="form-control" (change)="displayChanged()">
-                <option *ngIf="document.pages" [value]="ContentDisplayType.ORIGINAL">Tài liệu gốc</option>
-                <option [value]="ContentDisplayType.TEXT">Văn bản</option>
-                <option *ngIf="document.content_html" [value]="ContentDisplayType.HTML">HTML</option>
-              </select>
+            <label class="col-2 flex items-center">Hiển thị:</label>
+            <div class="col-10">
+              <mat-radio-group [(ngModel)]="displayType" (change)="displayChanged()">
+                <mat-radio-button *ngIf="document.pages" [value]="ContentDisplayType.ORIGINAL" class="mr-2">Tài liệu gốc</mat-radio-button>
+                <mat-radio-button [value]="ContentDisplayType.TEXT" class="mr-2">Văn bản</mat-radio-button>
+                <mat-radio-button *ngIf="document.content_html" [value]="ContentDisplayType.HTML">HTML</mat-radio-button>
+              </mat-radio-group>
             </div>
           </div>
           <div class="content-image" *ngIf="displayType === ContentDisplayType.ORIGINAL">
-            <Pagination [desc]="false" [totalItems]="imagePageCount" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
+            <Pagination [desc]="false" [totalItems]="imagePageCount" [page]="1" [size]="1" (pageChanged)="imagePageChanged($event)"></Pagination>
             <img #documentImage class="w-full"/>
           </div>
-          <Toggle [checked]="showContentHtml" *ngIf="document.content_html" class="mt-4 mb-2" title="Hiển thị dạng HTML" (onChanged)="toggleHtml($event)"></Toggle>
-          <textarea *ngIf="!showContentHtml" class="form-control" rows="25" [value]="document.content"></textarea>
-          <Pagination *ngIf="showContentHtml" [desc]="false" [totalItems]="htmlPageCount" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
-          <iframe #contentHtml class="w-full bg-white border-0" [class.hide]="!showContentHtml"></iframe>
+          <div class="content-html">
+            <Pagination *ngIf="displayType === ContentDisplayType.HTML" [desc]="false" [totalItems]="htmlPageCount" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
+            <iframe #contentHtml class="w-full bg-white border-0" [class.hide]="displayType !== ContentDisplayType.HTML"></iframe>
+          </div>
+          <textarea *ngIf="displayType === ContentDisplayType.TEXT" class="form-control" rows="25" [value]="document.content"></textarea>
         </div>
       </div>
 
