--- a/angular-search/src/app/page/workflow/workflow.component.html
+++ b/angular-search/src/app/page/workflow/workflow.component.html
@@ -38,9 +38,9 @@
                         <span (click)="removeStage(stage)" class="float-right">
                             <fa-icon [icon]="faTrash"></fa-icon>
                         </span>
-                        <span (click)="removeStage(stage)" class="float-right mr-2">
+                        <!--<span (click)="removeStage(stage)" class="float-right mr-2">
                             <fa-icon [icon]="faEdit"></fa-icon>
-                        </span>
+                        </span>-->
                     </ng-template>
                     <ng-template matStepContent>
                         <div *ngIf="stage.users.length > 0">
