--- a/angular-search/src/app/page/approve/approve.modal/approve.modal.component.html
+++ b/angular-search/src/app/page/approve/approve.modal/approve.modal.component.html
@@ -8,7 +8,25 @@
                         <Docform [doc]="doc" [props]="meta" [validation]="validation" #docForm></Docform>
                     </div>
                     <div class="col-md-6 p-4">
-                        <textarea class="form-control" [(ngModel)]="doc.content" [rows]="20"></textarea>
+                      <div class="row">
+                        <label class="col-2 flex items-center">Hiển thị:</label>
+                        <div class="col-10">
+                          <mat-radio-group [(ngModel)]="displayType" (change)="displayChanged()">
+                            <mat-radio-button *ngIf="doc.pages" [value]="ContentDisplayType.ORIGINAL" class="mr-2">Tài liệu gốc</mat-radio-button>
+                            <mat-radio-button [value]="ContentDisplayType.TEXT" class="mr-2">Văn bản</mat-radio-button>
+                            <mat-radio-button *ngIf="doc.content_html" [value]="ContentDisplayType.HTML">HTML</mat-radio-button>
+                          </mat-radio-group>
+                        </div>
+                      </div>
+                      <div class="content-image" *ngIf="displayType === ContentDisplayType.ORIGINAL">
+                        <Pagination [desc]="false" [totalItems]="imagePageCount" [page]="1" [size]="1" (pageChanged)="imagePageChanged($event)"></Pagination>
+                        <img #documentImage class="w-full"/>
+                      </div>
+                      <div class="content-html">
+                        <Pagination *ngIf="displayType === ContentDisplayType.HTML" [desc]="false" [totalItems]="htmlPageCount" [page]="1" [size]="1" (pageChanged)="htmlPageChanged($event)"></Pagination>
+                        <iframe #contentHtml class="w-full bg-white border-0" [class.hide]="displayType !== ContentDisplayType.HTML"></iframe>
+                      </div>
+                      <textarea *ngIf="displayType === ContentDisplayType.TEXT" class="form-control" rows="25" [value]="doc.content"></textarea>
                     </div>
                 </div>
             </div>
@@ -25,15 +43,37 @@
                 </div>
             </div>-->
         </mat-tab>
-        <mat-tab *ngIf="doc.attachments && doc.attachments.length > 0">
+        <mat-tab>
             <ng-template mat-tab-label>
                 Tập tin đính kèm
                 &nbsp;
-                <span class="badge badge-warning">{{doc.attachments.length}}</span>
+                <span class="badge badge-warning">{{doc.attachments.length ? doc.attachments.length : 0}}</span>
             </ng-template>
-            <Button (onClick)="downloadAttachment(doc.docidx, file)" class="mt-4 mr-2" icon="bxs-download.svg" type="secondary" *ngFor="let file of doc.attachments">{{file.downname}}</Button>
+            <div *ngIf="doc.attachments">
+              <div class="mt-2 mr-2 inline-block" *ngFor="let file of doc.attachments">
+                <Dropdown type="secondary" [text]="file.downname">
+                  <Button type="secondary" class="w-full" icon="bxs-download.svg" (onClick)="downloadAttachment(doc.docidx, file)">Tải xuống</Button>
+                  <Button type="secondary" class="w-full mt-1" icon="bx-trash.svg" (onClick)="deleteAttachment(docId, file)">Xoá</Button>
+                </Dropdown>
+              </div>
+            </div>
+
+          <ngx-dropzone (change)="onSelect($event)" class="mt-4" accept=".pdf,.doc,.docx,.xls,.xlsx,.txt,.png,.jpeg,.jpg,.gif,.bmp,.zip,.rar">
+            <ngx-dropzone-label>
+              <fa-icon [icon]="faFile"></fa-icon>
+              Bấm để chọn hoặc kéo thả tập tin đính kèm để tải lên ... <br/>
+              <small><em>(pdf, doc, docx, xls, xlsx, txt, png, jpeg, jpg, gif, bmp, zip, rar)</em></small>
+            </ngx-dropzone-label>
+            <ngx-dropzone-preview class="dropzone-preview"
+                                  [class.txt]="f.name.endsWith('.txt')"
+                                  *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
+              <img src="assets/icons/bxs-file-doc.svg"/>
+              <ngx-dropzone-label class="dropzone-label">{{ f.name }}</ngx-dropzone-label>
+            </ngx-dropzone-preview>
+          </ngx-dropzone>
+          <Button type="primary" icon="white/bx-cloud-upload.svg" class="mt-2 float-right" (onClick)="uploadAttachments()">Tải lên</Button>
         </mat-tab>
-        <mat-tab> 
+        <mat-tab>
             <ng-template mat-tab-label>
                 Tài liệu liên quan
                 &nbsp;
