--- a/angular-search/src/app/page/detail/detail.component.html
+++ b/angular-search/src/app/page/detail/detail.component.html
@@ -3,7 +3,7 @@
     <Card>
       <Button class="mr-2" type="primary" icon="white/bx-arrow-back.svg" (onClick)="backToSearch()">Trở lại</Button>
       <Button (click)="deleteDocument()" *ngIf="permissions.candelete" class="mr-2" type="secondary" icon="bx-trash.svg">Xoá tài liệu</Button>
-      <Button *ngIf="permissions.canedit" class="mr-2" type="secondary" icon="bx-edit-alt.svg">Sửa</Button>
+      <Button *ngIf="permissions.canedit" (click)="toggleUpdateMode()" class="mr-2" type="secondary" icon="bx-edit-alt.svg">Sửa</Button>
       <div class="row">
         <div class="col-md-6">
           <Table [columns]="tableColumns"
@@ -52,9 +52,16 @@
           {{getFileName(item)}}
           <img class="ml-2" src="assets/icons/gray/bx-file.svg"/>
         </Button>
-        <p *ngFor="let attachment of document.attachments">
+        <Button
+          type="secondary"
+          icon="gray/bxs-download.svg"
+          *ngFor="let attachment of document.attachments"
+          (onClick)="downloadFile(attachment)"
+          class="mr-2"
+        >
           {{attachment.downname}}
-        </p>
+          <img class="ml-2" src="assets/icons/gray/bx-file.svg"/>
+        </Button>
       </div>
     </Card>
   </div>
