--- a/angular-search/src/app/page/layout/header/rightnav/rightnav.component.html
+++ b/angular-search/src/app/page/layout/header/rightnav/rightnav.component.html
@@ -1,5 +1,27 @@
 <ul class="navbar-nav">
   <li class="nav-item dropdown" ngbDropdown>
+    <a ngbDropdownToggle href="javascript:void(0)"
+      class="nav-link profile-nav-link dropdown-toggle hide-caret"
+    >
+      <figure class="avatar avatar-sm">
+        <img src="assets/icons/bxs-grid-alt.svg" class="rounded-circle"/>
+      </figure>
+    </a>
+    <div class="dropdown-menu dropdown-menu-right dropdown-menu-big" ngbDropdownMenu>
+      <div class="list-group list-group-flush">
+          <div class="list-group-item module-item cursor-pointer" (click)="goToModule(module)" *ngFor="let module of modules">
+            <div class="module-icon-wrapper" [style.backgroundColor]="moduleGraphicMap[module.id].background">
+              <img [src]="'assets/icons/white/' + moduleGraphicMap[module.id].icon" alt=""/>
+            </div>
+            <div class="module-text">
+              <strong>{{module.name}}</strong>
+              <p>{{module.description}}</p>
+            </div>
+          </div>
+      </div>
+    </div>
+  </li>
+  <li class="nav-item dropdown" ngbDropdown>
     <a ngbDropdownToggle href="javascript: void(0);"
        class="nav-link profile-nav-link dropdown-toggle" title="User menu"
        data-toggle="dropdown">
