--- a/angular-search/src/app/page/workflow/workflow.component.scss
+++ b/angular-search/src/app/page/workflow/workflow.component.scss
@@ -16,4 +16,10 @@
         background-color: $color-primary-light;
         @apply rounded-lg p-4;
     }
+
+    .step {
+      border: 1px solid;
+      border-radius: 4px;
+      @apply border-gray-apple-aqua-300 p-2;
+    }
 }
