Update detail page

--- a/angular-search/src/app/page/detail/detail.component.html
+++ b/angular-search/src/app/page/detail/detail.component.html
@@ -18,8 +18,9 @@
               <fa-icon [icon]="faEdit" [classes]="['btn-edit']" size="lg"></fa-icon>
             </a>
             </ng-template>
-        </Table>
+          </Table>
         </div>
+        <!-- <p>{{dataSource[12]}}</p> -->
         <div *ngIf="sectionToggle.content" [class.col-md-6]="sectionToggle.metadata" [class.col-md-12]="!sectionToggle.metadata">
           <div class="row">
             <label class="col-2 flex items-center">Hiển thị:</label>
